# ruild

./: Cargo.toml  README.md
.github/workflows/: rust.yml
defaults/: macos.defaults  unix.defaults  windows.defaults
src/: main.rs
