[package]
name        = "mk1"
version     = "0.1.0"
edition     = "2021"
description = "Build single files from inside the file: put @build in a comment, then run `build <file>`. Directory-aware, with smart defaults."
license     = "MIT"
repository  = "https://github.com/hbbio/ruild"
readme      = "README.md"
keywords    = ["build", "make", "single-file", "inline", "annotation", "ruild"]
categories  = ["command-line-utilities", "development-tools::build-utils"]
default-run = "ruild"

# Produce a `ruild` binary.
[[bin]]
name = "ruild"
path = "src/main.rs"

[dependencies]
regex = "1"
